--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,3 +1,8 @@
+html {
+  width: 100%;
+  height: 100%;
+}
+
 .background {
   width: 100vw;
   height: 100vh;
@@ -5,6 +10,18 @@
 }
 
 .nav {
+  margin: 0px 1em;
   height: 4em;
-  width: 100%;
+  width: calc(100% - 2em);
+}
+
+.nav-link {
+  font-size: 1.5rem;
+  margin: 0px 0.5em;
+  text-decoration: none;
+}
+
+.thrasher {
+  font-family: 'Open Sans', sans-serif;
+  color: white;
 }
