--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -3,6 +3,18 @@ html {
   height: 100%;
 }
 
+h1, h2, h3, h4, h5, h6, div, span, a {
+  color: white;
+}
+
+.logo {
+  background-image: url("../images/templates.png");
+  background-position: 0 -837px;
+  background-repeat: no-repeat;
+  display: block;
+  height: 5.6em;
+}
+
 .background {
   width: 100vw;
   height: 100vh;
