--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -2,6 +2,7 @@ html {
   width: 100%;
   height: 100%;
   background-color: black;
+  user-select: none;
 }
 
 h1, h2, h3, h4, h5, h6, div, span, a {
@@ -54,6 +55,22 @@ header {
 .thrasher {
   font-family: 'Open Sans', sans-serif;
   color: white;
+}
+
+.dummy {
+  color: transparent;
+}
+
+.dummy:hover {
+  cursor: pointer;
+}
+
+#mail {
+  background-image: url("../images/templates.png");
+  background-position: -273px -92px;
+  width: 50px;
+  height: 22px;
+  padding-right: 20px;
 }
 
 main {
