--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -36,7 +36,7 @@ header {
   height: 5.6em;
   width: 276px;
   align-self: center;
-  justify-self: right;
+  justify-self: left;
   color: transparent;
 }
 
@@ -68,6 +68,7 @@ header {
 
 .dummy-form-container {
   display: inline;
+  margin-left: 3%;
 }
 
 .dummy-form {
@@ -79,7 +80,7 @@ header {
   border: 0px;
   height: 20.6px;
   position: relative;
-  top: -3px;
+  top: -4px;
   padding-bottom: 1px;
   padding-left: 5px;
   font-weight: bold;
@@ -98,13 +99,20 @@ header {
   background-color: white;
 }
 
+.dummy-nav {
+  justify-self: right;
+  align-self: center;
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
+
 
 #mail {
   background-image: url("../images/templates.png");
   background-position: -273px -92px;
   width: 50px;
   height: 22px;
-  padding-right: 38px;
 }
 
 #facebook {
@@ -133,6 +141,12 @@ header {
   background-position: -289px -70px;
   height: 22px;
   padding-right: 49px;
+}
+
+.sub-header {
+  display: grid;
+  grid-template-columns: none;
+  grid-template-rows: 60% 40%;
 }
 
 main {
