--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,3 +1,10 @@
+:root {
+  --button-blue: #1b71b2;
+  --button-blue-hover: #199CFE;
+  --button-green: #36AD47;
+  --button-green-hover: #1ac933;
+}
+
 html {
   width: 100%;
   height: 100%;
@@ -205,4 +212,44 @@ main {
   color: #666666;
   margin-top: 10px;
   margin-bottom: 6px;
+}
+
+.login-input {
+  font-weight: bold;
+  font-size: 14px;
+  padding: 3px;
+}
+
+.login-input:focus {
+  outline: none;
+}
+
+.login-button-container {
+  justify-self: center;
+  margin-top: 36px;
+  margin-bottom: 12px;
+}
+
+.button {
+  width: 200px;
+  padding: 12px 0px;
+  border-radius: 20px;
+  text-transform: uppercase;
+  border: none;
+  font-size: 14px;
+  font-family: 'Open Sans', sans-serif;
+  cursor: pointer;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.login-button {
+  color: white;
+  background-color: var(--button-blue);
+}
+
+.login-button:hover {
+  background-color: var(--button-blue-hover);
 }
