--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -236,6 +236,7 @@ main {
   border-radius: 20px;
   text-transform: uppercase;
   border: none;
+  letter-spacing: 0.5px;
   font-size: 14px;
   font-family: 'Open Sans', sans-serif;
   cursor: pointer;
@@ -248,6 +249,7 @@ main {
 .login-button {
   color: white;
   background-color: var(--button-blue);
+  transition: background-color 0.2s ease-in-out;
 }
 
 .login-button:hover {
