--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6, div, span, a {
   grid-template-areas: 
   "header"
   "main";
+  margin: 0px 20px;
 }
 
 /* Nav Bar Styling */
@@ -48,7 +49,6 @@ header {
   justify-self: left;
   color: transparent;
   cursor: pointer;
-  margin-left: 20px;
 }
 
 .nav {
@@ -123,7 +123,6 @@ header {
   justify-content: flex-end;
 }
 
-
 #mail {
   background-image: url("../images/templates.png");
   background-position: -273px -92px;
@@ -163,13 +162,11 @@ header {
   display: grid;
   grid-template-columns: none;
   grid-template-rows: 60% 40%;
-  margin-right: 20px;
 }
 
 main {
   grid-area: main;
   display: grid;
-  margin: 0px 20px;
 }
 
 /* Login & Signup page styling */
@@ -309,3 +306,10 @@ main {
 }
 
 /* Board index styling */
+
+#boards-container {
+  width: 100%;
+  max-width: 1120px;
+  justify-self: center;
+  background-image: url("../images/metal.jpg");
+}
