--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -367,7 +367,7 @@ main {
   color: black;
 }
 
-.board-description {
+.board-description, .post-description {
   padding: 0px 0px 8px 20px;
   margin: 0px;
   font-size: 14px;
@@ -407,11 +407,21 @@ main {
   justify-self: end;
   top: 10px;
   right: 10px;
-  height: 45px;
-  width: 90px;
+  height: 30px;
+  width: 75px;
   background-color: var(--button-red);
 }
 
 .index-delete:hover {
   background-color: var(--button-red-hover);
+}
+
+.delete-x {
+  position: relative;
+  top: -7px;
+}
+
+.time {
+  justify-self: end;
+  margin-right: 12px;
 }
