--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -251,7 +251,7 @@ main {
 
 /* Button Styling */
 
-.login-button-container, .signup-button-container {
+.login-button-container, .signup-button-container, .post-button-container {
   justify-self: center;
   margin-top: 36px;
   margin-bottom: 12px;
@@ -458,6 +458,11 @@ main {
 #post-form {
   margin: 8px;
   display: grid;
+}
+
+.post-input {
+  width: 350px;
+  align-self: center;
 }
 
 .post-textarea-input {
