--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -503,5 +503,6 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
-  margin-bottom: 0.5em;
+  padding-bottom: 1em;
+  border-bottom: black 1px solid;
 }
