--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -636,3 +636,11 @@ main {
   transform: skewX(7deg);
   margin: 0px;
 }
+
+@media only screen and (max-width: 950px) {
+  #root {
+    margin: 0px 0px;
+  }
+  
+  
+}
