--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -24,6 +24,7 @@ h1, h2, h3, h4, h5, h6, div, span, a {
   "header"
   "main";
   margin: 0px 20px;
+  transition: margin 2s;
 }
 
 /* Nav Bar Styling */
