--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -505,7 +505,7 @@ main {
   margin: 0px;
 }
 
-.post-text {
+.post-text, .post-show-text, .post-created {
   color: #666666;
   font-size: 12px;
 }
@@ -518,7 +518,6 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   width: 100%;
-  padding-bottom: 1em;
   border-bottom: black 1px solid;
 }
 
@@ -660,6 +659,10 @@ main {
     width: 100%;
     grid-area: header;
     justify-content: center;
+  }
+
+  .post-show-title, .post-show-text {
+    text-align: center;
   }
 }
 
