--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -41,10 +41,6 @@ h1, h2, h3, h4, h5, h6, div, span, a {
   justify-self: center;
 }
 
-#mobile-nav {
-  display: none;
-}
-
 .logo {
   background-image: url("../images/templates.png");
   background-position: 0 -837px;
@@ -72,6 +68,32 @@ h1, h2, h3, h4, h5, h6, div, span, a {
 .thrasher {
   font-family: 'Open Sans', sans-serif;
   color: white;
+}
+
+/* Mobile Nav Styling */
+
+#mobile-nav {
+  display: none;
+}
+
+#menu-button {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  margin-right: 2em;
+  margin-top: 48px;
+  background-color: transparent;
+  width: 44px;
+  height: 44px;
+  border: none;
+  background-image: url("../images/templates.png");
+  background-position: -245px -194px;
+  transition: filter .3s;
+}
+
+#menu-button:hover {
+  filter: blur(1.5px);
+  cursor: pointer;
 }
 
 /* Dummy Nav Styling */
