--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -106,6 +106,11 @@ h1, h2, h3, h4, h5, h6, div, span, a {
   cursor: pointer;
 }
 
+#mobile-dropdown {
+  height: 100px;
+  background: grey;
+}
+
 /* Dummy Nav Styling */
 
 .dummy {
