--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -754,6 +754,15 @@ main {
   .post-show-title, .post-show-text {
     text-align: center;
   }
+
+  #login-form, #signup-form {
+    min-width: auto;
+  }
+
+  #login-form-container, #signup-form-container {
+    width: 100%;
+    box-sizing: border-box;
+  }
 }
 
 @media only screen and (max-width: 750px) {
