--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -158,7 +158,7 @@ h1, h2, h3, h4, h5, h6, div, span, a {
 .dummy {
   color: transparent;
   margin: 0px 1.5%;
-  transition: filter .3s;
+  transition: all .3s;
 }
 
 .dummy:hover {
@@ -751,6 +751,15 @@ main {
     display: block;
   }
 
+  .dummy-nav {
+    justify-content: center;
+    margin-bottom: 1em;
+  }
+
+  .dummy-form-container {
+    display: none;
+  }
+
   .post-show-title, .post-show-text {
     text-align: center;
   }
@@ -766,6 +775,11 @@ main {
 }
 
 @media only screen and (max-width: 750px) {
+  .dummy {
+    transform: scale(0.75);
+    margin: 8px 1% 0px 1%;
+  }
+
   .post-text {
     grid-template-columns: none;
     grid-template-rows: auto;
