--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -258,7 +258,7 @@ main {
   margin-bottom: 2em;
 }
 
-#dummy-mobile-nav {
+.dummy-mobile-nav {
   display: none;
 }
 
@@ -755,7 +755,7 @@ main {
     display: block;
   }
 
-  #dummy-mobile-nav {
+  .dummy-mobile-nav {
     display: flex;
     justify-content: center;
     margin-bottom: 1em;
